fix color selecting being too tall

--- a/frontend/src/app/home/components/color-selector/color-selector.component.scss
+++ b/frontend/src/app/home/components/color-selector/color-selector.component.scss
@@ -4,6 +4,7 @@
   box-shadow: -12px 0px 35px 15px rgba(0, 0, 0, 0.4);
   position: relative;
   z-index: 50;
+  box-sizing: border-box;
 }
 
 .color-label {
